--- a/modules/api/pom.xml
+++ b/modules/api/pom.xml
@@ -11,12 +11,22 @@
 	</parent>
 
 	<groupId>de.odysseus.juel</groupId>
-	<artifactId>juel-api</artifactId>
+	<artifactId>juel-api-using-openbeans</artifactId>
 	<packaging>jar</packaging>
 
 	<name>Java Unified Expression Language API</name>
-	<version>2.2.8-SNAPSHOT</version>
+	<version>2.2.8</version>
 
+	<dependencies>
+		<dependency>
+			<groupId>openbeans</groupId>
+			<artifactId>openbeans</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/../../lib/openbeans-1.0.jar</systemPath>
+		</dependency>
+	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
