--- a/modules/impl/pom.xml
+++ b/modules/impl/pom.xml
@@ -11,11 +11,11 @@
 	</parent>
 
 	<groupId>de.odysseus.juel</groupId>
-	<artifactId>juel-impl</artifactId>
+	<artifactId>juel-impl-using-openbeans</artifactId>
 	<packaging>jar</packaging>
 
 	<name>Java Unified Expression Language Implementation</name>
-	<version>2.2.8-SNAPSHOT</version>
+	<version>2.2.8</version>
 
 	<build>
 		<plugins>
@@ -56,6 +56,13 @@
 			<artifactId>juel-api</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>openbeans</groupId>
+			<artifactId>openbeans</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/../../lib/openbeans-1.0.jar</systemPath>
 		</dependency>
 	</dependencies>
 </project>
