--- a/modules/spi/pom.xml
+++ b/modules/spi/pom.xml
@@ -11,11 +11,11 @@
 	</parent>
 
 	<groupId>de.odysseus.juel</groupId>
-	<artifactId>juel-spi</artifactId>
+	<artifactId>juel-spi-using-openbeans</artifactId>
 	<packaging>jar</packaging>
 
 	<name>Java Unified Expression Language Service Provider</name>
-	<version>2.2.8-SNAPSHOT</version>
+	<version>2.2.8</version>
 
 	<build>
 		<plugins>
