--- a/modules/impl/pom.xml
+++ b/modules/impl/pom.xml
@@ -53,7 +53,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>juel-api</artifactId>
+			<artifactId>juel-api-using-openbeans</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
